--- a/ej2/index.html
+++ b/ej2/index.html
@@ -11,12 +11,18 @@
     <div class="main-container">
       <nav>
         <img src="img/ki-32.png" alt="Logo" />
-        <ul>
-          <li><a href="">Inicio</a></li>
-          <li><a href="">Galería</a></li>
-          <li><a href="">Contacto</a></li>
-        </ul>
+        <a href="">Inicio</a>
+        <a href="">Galería</a>
+        <a href="">Contacto</a>
       </nav>
+
+      <main>
+        <article>
+          <h1>Hola gente</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae illum voluptatum perspiciatis deserunt numquam tenetur magni illo, quod cum voluptas qui porro nisi repellat magnam doloremque ea veniam! Officia.</p>
+        </article>
+      </main>
+
     </div>
   </body>
 </html>
