--- a/ej2/index.html
+++ b/ej2/index.html
@@ -10,7 +10,9 @@
   <body>
     <div class="main-container">
       <nav>
-        <img src="img/ki-32.png" alt="Logo" />
+        <div class="nav-img">
+          <img src="img/ki-32.png" alt="Logo" />
+        </div>
         <a href="">Inicio</a>
         <a href="">Galería</a>
         <a href="">Contacto</a>
@@ -18,11 +20,29 @@
 
       <main>
         <article>
-          <h1>Hola gente</h1>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae illum voluptatum perspiciatis deserunt numquam tenetur magni illo, quod cum voluptas qui porro nisi repellat magnam doloremque ea veniam! Officia.</p>
+          <h1>Artículo 1</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae
+            illum voluptatum perspiciatis deserunt numquam tenetur magni illo,
+            quod cum voluptas qui porro nisi repellat magnam doloremque ea
+            veniam! Officia.
+          </p>
+          <br />
+          <br />
+        </article>
+
+        <article>
+          <h1>Artículo 2</h1>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae
+            illum voluptatum perspiciatis deserunt numquam tenetur magni illo,
+            quod cum voluptas qui porro nisi repellat magnam doloremque ea
+            veniam! Officia.
+          </p>
+          <br />
+          <br />
         </article>
       </main>
-
     </div>
   </body>
 </html>
