--- a/ej2/index.html
+++ b/ej2/index.html
@@ -4,45 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
-    <title>Ejercicio 2: Landing Page</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Landing page</title>
   </head>
   <body>
-    <div class="main-container">
-      <nav>
-        <div class="nav-img">
-          <img src="img/ki-32.png" alt="Logo" />
-        </div>
-        <a href="">Inicio</a>
-        <a href="">Galería</a>
-        <a href="">Contacto</a>
-      </nav>
-
-      <main>
-        <article>
-          <h1>Artículo 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae
-            illum voluptatum perspiciatis deserunt numquam tenetur magni illo,
-            quod cum voluptas qui porro nisi repellat magnam doloremque ea
-            veniam! Officia.
-          </p>
-          <br />
-          <br />
-        </article>
-
-        <article>
-          <h1>Artículo 2</h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste beatae
-            illum voluptatum perspiciatis deserunt numquam tenetur magni illo,
-            quod cum voluptas qui porro nisi repellat magnam doloremque ea
-            veniam! Officia.
-          </p>
-          <br />
-          <br />
-        </article>
-      </main>
-    </div>
+    <!-- NAV -->
+    <nav class="nav">
+      <div>
+        <img
+          class="logo"
+          src="https://placehold.co/50/FFFFFF/000?text=Logo"
+          alt="logo"
+        />
+      </div>
+      <ul class="nav__links">
+        <li><a href="#" class="nav__link">Inicio</a></li>
+        <li><a href="#" class="nav__link">Productos</a></li>
+        <li><a href="#" class="nav__link">Contacto</a></li>
+      </ul>
+    </nav>
+    <!-- ART -->
+    <main class="main"></main>
   </body>
 </html>
