--- a/ej2/index.html
+++ b/ej2/index.html
@@ -8,22 +8,34 @@
     <title>Landing page</title>
   </head>
   <body>
-    <!-- NAV -->
-    <nav class="nav">
-      <div>
-        <img
-          class="logo"
-          src="https://placehold.co/50/FFFFFF/000?text=Logo"
-          alt="logo"
-        />
-      </div>
-      <ul class="nav__links">
-        <li><a href="#" class="nav__link">Inicio</a></li>
-        <li><a href="#" class="nav__link">Productos</a></li>
-        <li><a href="#" class="nav__link">Contacto</a></li>
-      </ul>
-    </nav>
-    <!-- ART -->
+    <div class="main-containter">
+
+      <header class="header">
+        <div class="header-div">
+
+        </div>
+      </header>
+
+      <!-- #region NAV-->
+      <nav class="nav">
+        <div>
+          <img
+            class="nav_logo"
+            src="https://placehold.co/50/FFFFFF/000?text=Logo"
+            alt="logo"
+          />
+        </div>
+        <ul class="nav_links">
+          <li><a href="#" class="nav_link">Inicio</a></li>
+          <li><a href="#" class="nav_link">Productos</a></li>
+          <li><a href="#" class="nav_link">Contacto</a></li>
+        </ul>
+      </nav>
+      <!-- #endregion-->
+
+
+    </div>
+
     <main class="main"></main>
   </body>
 </html>
