--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
 
   <body>
+    
     <header>
       <nav class="navbar">
         <ul class="navbar-list">
@@ -49,7 +50,7 @@
       <section class="info1">
         <h2>more about us</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos
+          Lorem ipsuma, dolor sit amet consectetur adipisicing elit. Eos
           laudantium atque sunt esse, temporibus, sint aperiam recusandae
           excepturi nihil vitae id eius doloribus repellendus maxime
           perferendis, minima consequuntur in similique. Veniam pariatur minus
