--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
     <title>Landing</title>
-  
   </head>
   <body>
     <!-- NAVBAR -->
@@ -135,7 +134,12 @@
 
       <!--  -->
 
-      <!-- https://www.youtube.com/watch?v=4t-g615PEtg -->
+      <footer>
+          <img
+            alt="Creative Commons License"
+            src="https://i.creativecommons.org/p/mark/1.0/88x31.png"
+          />
+      </footer>
     </main>
   </body>
 </html>
