--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <a href="#contact">Contact</a>
             </div>
           </label>
-          <a class="logo" href="index.html">Home</a>
+          <a class="logo" href="#home">Home</a>
         </div>
 
         <div class="nav-right">
@@ -41,7 +41,7 @@
     <div class="main-container">
       <div class="spacer"></div>
 
-      <section class="hero">
+      <section class="hero" id="home">
         <h1>Hi, I'm Daniel.</h1>
         <p>
           <span class="welcome-span">Welcome to my digital playground</span>, where design meets function in a bold and beautiful way. My passion for graphic design has brought me here, to showcase my creative talents and connect with clients from all over the world.
